--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ body {
       <center><div id="answer"></div></center>
     </div>
     <div class="footer">
-      <span id="year"></span> Made by Carlos and Anna in DFW.
+      <span id="year"></span> Made by Carlos and Anna during quarantine in DFW.
     </div>
   </div>
 </body>
