Update Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161181706-1"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162547769-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-161181706-1');
+    gtag('config', 'UA-162547769-1');
   </script>
+
   <script>
     function updatePage(os) {
       $("#year").html(new Date().getFullYear() + ". " + $("#year").text());
